<resources>
    <string name="app_name">Allergy Finder</string>
    <string name="my_allergies">My Allergies</string>
    <string name="scan">Scan</string>
    <string name="enter_allergy_product">Enter Allergy Product</string>
    <string name="allergy_e_g_peanuts">Allergy. e.g. Peanuts</string>
    <string name="status">Status</string>
    <string name="add_allergy_button">Add Allergy Button</string>
    <string name="profile_image">Profile Image</string>
    <string name="allergy_finder">Allergy Finder</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_out">log out</string>
    <string name="product_item">product item</string>
</resources>
